err/raptus.browsermessage.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/browserdetector'...
Listing './lib/python3.5/site-packages/collective/browserdetector/portlets'...
Listing './lib/python3.5/site-packages/collective/browserdetector/profiles'...
Listing './lib/python3.5/site-packages/collective/browserdetector/profiles/default'...
Listing './lib/python3.5/site-packages/collective/browserdetector/skins'...
Listing './lib/python3.5/site-packages/collective/browserdetector/skins/collective.browserdetector'...
Listing './lib/python3.5/site-packages/collective/browserdetector/tests'...
Listing './lib/python3.5/site-packages/collective.browserdetector-1.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/raptus'...
Listing './lib/python3.5/site-packages/raptus/browsermessage'...
Listing './lib/python3.5/site-packages/raptus/browsermessage/Extensions'...
Listing './lib/python3.5/site-packages/raptus/browsermessage/browser'...
Listing './lib/python3.5/site-packages/raptus/browsermessage/i18n'...
Listing './lib/python3.5/site-packages/raptus/browsermessage/profiles'...
Listing './lib/python3.5/site-packages/raptus/browsermessage/profiles/default'...
Listing './lib/python3.5/site-packages/raptus/browsermessage/profiles/uninstall'...
Listing './lib/python3.5/site-packages/raptus/browsermessage/skins'...
Listing './lib/python3.5/site-packages/raptus/browsermessage/skins/browsermessage'...
Compiling './lib/python3.5/site-packages/raptus/browsermessage/skins/browsermessage/browsermessage_ignore.py'...
***   File "./lib/python3.5/site-packages/raptus/browsermessage/skins/browsermessage/browsermessage_ignore.py", line 12
    return 'success'
                   ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/raptus.browsermessage-0.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
